k8s/base/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: penchaljdevops/worker-app:138a83e0bc0ba869edd4b6fa672d89b6d16728bd
