k8s/base/voting-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
spec:
  ingressClassName: nginx          # important for newer NGINX Ingress
  rules:
  - http:
      paths:
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80

      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
